Fixed Color issues on Transaprent navbar
- Fixed dropdown menu color for multilingual sites
- Added spacing for dropdown arrow on Donate button to prevent text overlap
- Fixed Donate button dropdown icon to always be black

--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -144,13 +144,17 @@ body.transparent-nav {
         background: var(--grey-800);
       }
 
-      .accessible-nav-link {
+      .accessible-nav-link:not(.nav-donate.has-children .accessible-nav-link) {
         background-image: url("../../images/white_arrow_up.svg");
         transform: rotate(180deg);
 
         &.rotate {
           transform: rotate(360deg);
         }
+      }
+
+      .nav-languages-toggle {
+        color: var(--white);
       }
     }
 
